Fix border-spacing for bordered tables

--- a/www/css/freshports.css
+++ b/www/css/freshports.css
@@ -222,6 +222,7 @@ table.borderless {
 
 table.bordered {
   border: 1px outset black;
+  border-spacing: 0;
 }
 
 table.bordered > tbody > tr > td {
